[metadata]
name = pycasl3
version = attr: pycasl3.__version__
description = CASL II Assembler and Simulater for Python3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/pycasl3
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = GPL 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords =
    casl2
    comet2

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    pycasl3 = pycasl3.pycasl3:main
    pycomet3 = pycasl3.pycomet3:main

[options.extras_require]
dev =
    pre-commit

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
ignore =
    E203 # whitespace before ':'
    E741 # ambiguous variable name 'l'

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 120
